fixed data explainer popup visibility

--- a/src/static/scss/components/_data-block.scss
+++ b/src/static/scss/components/_data-block.scss
@@ -87,7 +87,7 @@
 				fill: palette-get(na-black-30);
 
 				&:hover {
-					fill: palette-get(na-turquoise);
+					fill: palette-get(na-black);
 				}
 			}
 
